# special

./: .travis.yml  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: build.yml  check-no-std.yml
benches/: beta.rs  error.rs  gamma.rs  lib.rs
src/: basic.rs  bessel.rs  beta.rs  consts.rs  elliptic.rs  error.rs  gamma.rs  lambert_w.rs  lib.rs  m.rs  math.rs  omega.rs  primitive.rs
src/math/: floatext.rs  mod.rs  rust.rs
src/primitive/: extrinsic.rs  intrinsic.rs  mod.rs
