[package]
name = "special"
version = "0.11.3"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Abhishek Chanda <abhishek.becs@gmail.com>",
    "Albert Pang <albert.pang@me.com>",
    "Baxter Eaves <baxyjr@gmail.com>",
    "Benjamin Lieser <benjamin.lieser@mpinat.mpg.de>",
    "Christian Amsüss <chrysn@fsfe.org>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Johanna Sörngård <jsorngard@gmail.com>",
    "Robert Bamler <robert.bamler@uni-tuebingen.de>",
    "Rúnar Berg Baugsson Sigríðarson <runarberg@zoho.com>",
    "zolkko <zolkko@gmail.com>",
]
description = "The package provides special functions."
documentation = "https://docs.rs/special"
homepage = "https://github.com/stainless-steel/special"
repository = "https://github.com/stainless-steel/special"
readme = "README.md"
categories = ["algorithms", "no-std::no-alloc", "science"]
keywords = ["beta", "error", "lambert-w", "gamma"]

[features]
default = ["no_std"]
# Use `libm` to do certain math operations. This feature must be enabled if the `std` feature is disabled.
no_std = ["lambert_w/libm"]
# Link the standard library and use it for some computations. When this feature is disabled the crate is no_std compatible. This feature takes precedence over the `no_std` feature.
std = ["lambert_w/std"]

[dependencies]
lambert_w = { version = "1.0.0", default-features = false }
libm = "0.2"

[dev-dependencies]
assert = "0.7"
random = "0.12"
