[package]
name = "special"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Abhishek Chanda <abhishek.becs@gmail.com>",
    "Albert Pang <albert.pang@me.com>",
    "Baxter Eaves <baxyjr@gmail.com>",
    "Benjamin Lieser <benjamin.lieser@mpinat.mpg.de>",
    "Christian Amsüss <chrysn@fsfe.org>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Johanna Sörngård <jsorngard@gmail.com>",
    "Robert Bamler <robert.bamler@uni-tuebingen.de>",
    "Rúnar Berg Baugsson Sigríðarson <runarberg@zoho.com>",
    "zolkko <zolkko@gmail.com>",
]
description = "The package provides special functions."
documentation = "https://docs.rs/special"
homepage = "https://github.com/stainless-steel/special"
repository = "https://github.com/stainless-steel/special"
readme = "README.md"
categories = ["algorithms", "no-std::no-alloc", "science"]
keywords = ["beta", "error", "lambert-w", "gamma"]

[features]
default = ["no_std"]

# If one of the two features is disabled, the other one must be enabled. If both
# features are enabled, `std` takes precedence over `no_std`.
no_std = ["lambert_w/libm"]
std = ["lambert_w/std"]

[dependencies]
lambert_w = { version = "1.0.0", default-features = false }
libm = "0.2"

[dev-dependencies]
assert = "0.7"
random = "0.12"
