[package]
name = "special"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Abhishek Chanda <abhishek.becs@gmail.com>",
    "Albert Pang <albert.pang@me.com>",
    "Baxter Eaves <baxyjr@gmail.com>",
    "Benjamin Lieser <benjamin.lieser@mpinat.mpg.de>",
    "Christian Amsüss <chrysn@fsfe.org>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Johanna Sörngård <jsorngard@gmail.com>",
    "Robert Bamler <robert.bamler@uni-tuebingen.de>",
    "Rúnar Berg Baugsson Sigríðarson <runarberg@zoho.com>",
    "Sira Pornsiriprasert <code@psira.me>",
    "zolkko <zolkko@gmail.com>",
]
description = "The package provides special functions."
documentation = "https://docs.rs/special"
homepage = "https://github.com/stainless-steel/special"
repository = "https://github.com/stainless-steel/special"
readme = "README.md"
categories = ["algorithms", "no-std::no-alloc", "science"]
keywords = ["beta", "elliptic", "error", "lambert-w", "gamma"]

[features]
default = ["elliptic", "lambert_w", "no_std"]

# If one of the two features is disabled, the other one must be enabled. If both
# features are enabled, `std` takes precedence over `no_std`.
no_std = ["lambert_w?/libm", "elliptic?/libm"]
std = ["lambert_w?/std", "elliptic?/std"]

elliptic = ["ellip"]

[dependencies]
ellip = { version = "1.1.0", default-features = false, optional = true }
lambert_w = { version = "1", default-features = false, optional = true }
libm = "0.2"

[dev-dependencies]
assert = "0.7"
random = "0.14"
